{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 31,
  "lineage": "74216cff-bac6-1427-3b0e-dfb6a9c2fb84",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08231d9638b26758d",
            "arn": "arn:aws:ec2:us-east-1:339712979559:instance/i-0f6f91838ddd25fe1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6f91838ddd25fe1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keynew",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d4ed365542ffc7c0",
            "private_dns": "ip-10-0-0-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.106",
            "public_ip": "98.80.141.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cfa55e204b27eeb0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c7cb7a860a1a2c03"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099d1f0dd862cecf8",
            "tags": {
              "Name": "terra-public"
            },
            "tags_all": {
              "Name": "terra-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7cb7a860a1a2c03"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.pub",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pvt-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08231d9638b26758d",
            "arn": "arn:aws:ec2:us-east-1:339712979559:instance/i-047c487d24d035cae",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047c487d24d035cae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keynew",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-036f796f53153ae0b",
            "private_dns": "ip-10-0-0-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b75a238f14aa5ac3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c7cb7a860a1a2c03"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08eb85f87bd69019d",
            "tags": {
              "Name": "terra-private"
            },
            "tags_all": {
              "Name": "terra-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7cb7a860a1a2c03"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.pvt",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712979559:internet-gateway/igw-051b5a15a7c8457d5",
            "id": "igw-051b5a15a7c8457d5",
            "owner_id": "339712979559",
            "tags": {
              "Name": "terra-igw"
            },
            "tags_all": {
              "Name": "terra-igw"
            },
            "vpc_id": "vpc-07893df06e50c8491"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rout1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051b5a15a7c8457d5",
            "id": "r-rtb-02d6d906a157eba2a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d6d906a157eba2a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-rt",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712979559:route-table/rtb-02d6d906a157eba2a",
            "id": "rtb-02d6d906a157eba2a",
            "owner_id": "339712979559",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051b5a15a7c8457d5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-public-rt"
            },
            "tags_all": {
              "Name": "terra-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07893df06e50c8491"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712979559:route-table/rtb-0af96cb32ee5eb90e",
            "id": "rtb-0af96cb32ee5eb90e",
            "owner_id": "339712979559",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra-private-rt"
            },
            "tags_all": {
              "Name": "terra-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07893df06e50c8491"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0439ed7c3bfecd387",
            "route_table_id": "rtb-02d6d906a157eba2a",
            "subnet_id": "subnet-099d1f0dd862cecf8"
          },
          "dependencies": [
            "aws_route_table.pub-rt",
            "aws_subnet.pub",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712979559:security-group/sg-0c7cb7a860a1a2c03",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7cb7a860a1a2c03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terra-sg",
            "name_prefix": "",
            "owner_id": "339712979559",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07893df06e50c8491"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712979559:subnet/subnet-099d1f0dd862cecf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099d1f0dd862cecf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712979559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub"
            },
            "tags_all": {
              "Name": "public-sub"
            },
            "vpc_id": "vpc-07893df06e50c8491"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712979559:subnet/subnet-08eb85f87bd69019d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eb85f87bd69019d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712979559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub"
            },
            "tags_all": {
              "Name": "private-sub"
            },
            "vpc_id": "vpc-07893df06e50c8491"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712979559:vpc/vpc-07893df06e50c8491",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-08d53c294fcc800b4",
            "default_route_table_id": "rtb-0f06cb85eb8364633",
            "default_security_group_id": "sg-0df992491eddded1b",
            "dhcp_options_id": "dopt-0ba5c7d871a76ee24",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07893df06e50c8491",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f06cb85eb8364633",
            "owner_id": "339712979559",
            "tags": {
              "Name": "Terravpc"
            },
            "tags_all": {
              "Name": "Terravpc"
            }
          }
        }
      ]
    }
  ]
}